# AI-Code-Reviewer

./: .gitignore  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  runbook.md
demo/: __init__.py  streamlit_app.py
docker/: Dockerfile.api  Dockerfile.streamlit
models/: __init__.py  codebert_clf.py
scripts/: 01_extract_bugsinpy.py  02_extract_quixbugs.py  03_merge_and_split.py  04_show_stats.py  05_generate_synthetic_bugs.py  06_merge_synthetic.py  99_download_samples.sh  __init__.py
serving/: __init__.py  app.py  inference.py  schemas.py
tests/: __init__.py  test_dataprep.py  test_inference.py  test_tokenizer.py
training/: __init__.py  config.yaml  datamodule.py  evaluate.py  tokenizer.py  train.py  utils.py
